@@ -2,7 +2,7 @@ Package: MLGL
 Type: Package
 Title: Multi-Layer Group-Lasso
 Version: 0.5
-Date: 2018-09-15
+Date: 2018-09-22
 Authors@R: c(person("Quentin", "Grimonprez", role = c("aut", "cre"), email = "quentin.grimonprez@inria.fr"),
              person("Samuel", "Blanck", role = "ctb"),
              person("Alain", "Celisse", role = "ths"),
