@@ -2,14 +2,17 @@
 
 S3method(coef,MLGL)
 S3method(coef,cv.MLGL)
+S3method(plot,HMT)
 S3method(plot,MLGL)
 S3method(plot,cv.MLGL)
 S3method(plot,fullProcess)
 S3method(plot,stability.MLGL)
 S3method(predict,MLGL)
 S3method(predict,cv.MLGL)
+S3method(print,HMT)
 S3method(print,MLGL)
 S3method(print,fullProcess)
+S3method(summary,HMT)
 S3method(summary,MLGL)
 S3method(summary,fullProcess)
 export(Chisqtest)
