@@ -1,22 +1,22 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/print.R
-\name{print.fullProcess}
-\alias{print.fullProcess}
-\title{Print Values
+\name{summary.HMT}
+\alias{summary.HMT}
+\title{Object Summaries
 
-Print a \code{\link{fullProcess}} object}
+Summary of a \code{\link{HMT}} object}
 \usage{
-\method{print}{fullProcess}(x, ...)
+\method{summary}{HMT}(object, ...)
 }
 \arguments{
-\item{x}{\code{\link{fullProcess}} object}
+\item{object}{\code{\link{HMT}} object}
 
 \item{...}{Not used.}
 }
 \description{
-Print Values
+Object Summaries
 
-Print a \code{\link{fullProcess}} object
+Summary of a \code{\link{HMT}} object
 }
 \examples{
 set.seed(42)
@@ -25,10 +25,11 @@ X <- simuBlockGaussian(50, 12, 5, 0.7)
 # Generate a response variable
 y <- drop(X[,c(2,7,12)]\%*\%c(2,2,-2)+rnorm(50,0,0.5))
 # Apply MLGL method
-res <- fullProcess(X, y)
-print(res)
+res <- MLGL(X, y)
+out <- HMT(res, X, y)
+summary(out)
 
 }
 \seealso{
-\link{fullProcess} \link{summary.fullProcess}
+\link{HMT} \link{print.HMT}
 }
