@@ -13,13 +13,21 @@ Summary of a \code{\link{fullProcess}} object}
 
 \item{...}{Not used.}
 }
-\value{
-A matrix with fitted values or estimated coefficients for given values of s.
-}
 \description{
 Object Summaries
 
 Summary of a \code{\link{fullProcess}} object
+}
+\examples{
+set.seed(42)
+# Simulate gaussian data with block-diagonal variance matrix containing 12 blocks of size 5
+X <- simuBlockGaussian(50, 12, 5, 0.7)
+# Generate a response variable
+y <- drop(X[,c(2,7,12)]\%*\%c(2,2,-2)+rnorm(50,0,0.5))
+# Apply MLGL method
+res <- fullProcess(X, y)
+summary(res)
+
 }
 \seealso{
 \link{fullProcess} \link{print.fullProcess}
